# src/main/java/fr/gopartner/locationvoiture/domain/customer/CustomerController.java
@@ -2,38 +2,49 @@ package fr.gopartner.locationvoiture.domain.customer;
 
 import fr.gopartner.locationvoiture.CustomersApiDelegate;
 import fr.gopartner.locationvoiture.dto.CustomerDto;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.context.request.NativeWebRequest;
 
 import java.util.List;
-import java.util.Optional;
 
 @RestController
 public class CustomerController implements CustomersApiDelegate {
 
+    private final CustomerService customerService;
+
+    public CustomerController(CustomerService customerService) {
+        this.customerService = customerService;
+    }
+
     @Override
-    public ResponseEntity<Void> createCustomer(CustomerDto customerDto) {
-        return CustomersApiDelegate.super.createCustomer(customerDto);
+    public ResponseEntity<CustomerDto> createCustomer(CustomerDto customerDto) {
+        CustomerDto dto = customerService.createCustomer(customerDto);
+        return new ResponseEntity<>(dto, HttpStatus.CREATED);
     }
 
     @Override
     public ResponseEntity<Void> deleteCustomerById(Long id) {
-        return CustomersApiDelegate.super.deleteCustomerById(id);
+        customerService.deleteCustomer(id);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
     @Override
     public ResponseEntity<CustomerDto> getCustomerById(Long id) {
-        return CustomersApiDelegate.super.getCustomerById(id);
+        CustomerDto customerDto = customerService.searchCustomerById(id);
+        return new ResponseEntity<>(customerDto, HttpStatus.OK);
     }
 
     @Override
     public ResponseEntity<List<CustomerDto>> getCustomers() {
-        return CustomersApiDelegate.super.getCustomers();
+        List<CustomerDto> customerDtoList = customerService.getAllCustomers();
+        return new ResponseEntity<>(customerDtoList, HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Void> updateCustomerById(Long id, CustomerDto customerDto) {
-        return CustomersApiDelegate.super.updateCustomerById(id, customerDto);
+    public ResponseEntity<CustomerDto> updateCustomerById(Long id, CustomerDto customerDto) {
+        CustomerDto dto = customerService.updateCustomer(id, customerDto);
+        return new ResponseEntity<>(dto, HttpStatus.OK);
     }
+
 }
